# gpt2cc

./: .env.example  .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
ccproxy/: __init__.py  config.py  image.py  server.py  tokens.py  transform.py  upstream.py
gpt2cc/: __init__.py  anthropic_upstream.py  config.py  gemini.py  image.py  server.py  sse.py  streaming.py  transform.py  upstream.py  usage_stats.py
tests/: test_admin_usage_stats.py  test_anthropic_upstream.py  test_config.py  test_gemini.py  test_image.py  test_server_admin.py  test_streaming.py  test_transform.py  test_upstream.py  test_usage_capture.py  test_usage_stats.py
