[project]
name = "ccproxy"
version = "0.1.0"
description = "Anthropic Messages API proxy for Claude Code backed by OpenAI-compatible Codex relay APIs."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ccproxy = "ccproxy.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
